Apply css .cf-form-radio-options spacing fix only to intake modal

--- a/client/app/styles/_intake.scss
+++ b/client/app/styles/_intake.scss
@@ -73,6 +73,11 @@
     margin-bottom: 10px;
   }
 
+  .cf-form-radio-options {
+    margin-top: 0;
+    margin-bottom: 14px;
+  }
+
   @media only screen and (max-width: 760px) {
     width: 650px;
 
